# enterprise-rag

./: LICENSE  README.md
backend/: .env.example  Dockerfile  pyproject.toml  railway.toml  requirements.txt
backend/src/api/: dependencies.py  main.py
backend/src/api/routes/: health.py  ingest.py  metrics.py  query.py
backend/src/core/: config.py  logging.py  security.py
backend/src/evaluation/: metrics.py  ragas_eval.py
backend/src/generation/: citations.py  llm.py  prompts.py
backend/src/ingestion/: chunker.py  embedder.py  indexer.py  parsers.py
backend/src/retrieval/: bm25_store.py  cache.py  hybrid.py  reranker.py  vector_store.py
backend/src/utils/: embeddings.py
frontend/: README.md  package.json  vercel.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: MessageBubble.tsx  SourceCitation.tsx
scripts/: evaluate.py  seed_data.py
