[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterpriserag"
version = "1.0.0"
description = "Production-grade RAG system with hybrid retrieval and semantic caching"
authors = [
    {name = "EnterpriseRAG Team", email = "team@enterpriserag.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/yourusername/enterpriserag"
Repository = "https://github.com/yourusername/enterpriserag"
Documentation = "https://docs.enterpriserag.com"
